# convergence-interview

./: README.md  pyproject.toml  requirements.dev.txt
requirements/: dev.in
src/: __init__.py  config.py  llm_agent.py  main.py  models.py  pokeapi_client.py  visualiser.py  web_researcher.py
tests/: test_llm_agent.py  test_pokeapi_client.py  test_simple.py  test_web_researcher.py
